# geomentor-prompts

./: .gitignore  CATEGORY_IMPLEMENTATION.md  GEOCODING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  test_geocoding.py
docs/location-mcp/: README.md  elevation.md  geocoding.md  maps.md  places.md  routing.md
prompt-templates/data-scientist/image-analysis/: understanding-where.md
prompt-templates/data-scientist/spatial-analysis/: detecting-quantifying-patterns.md  determining-relationships.md  finding-best-locations-paths.md  making-predictions.md  measuring-size-shape-distribution.md  understanding-where.md
prompt-templates/intelligence-analyst/blogging/: creating-blog-posts.md
src/agents/routing_agent/: .env.example  README.md  main.py  pyproject.toml  test_scenarios.py
src/agents/routing_agent/routing_agent/: __init__.py  agent.py  location_state.py  mock_agent.py
src/agents/routing_agent/routing_agent/tests/: test_routing_agent.py
src/agents/wildfire_detection/: .env.example  README.md  main.py  pyproject.toml  test_scenarios.py  test_wildfire_agent.py
src/agents/wildfire_detection/wildfire_agent/: __init__.py  agent.py  location.py
src/agents/wildfire_detection/wildfire_agent/tests/: test_wildfire_agent.py
src/agents/wildfire_detection/wildfire_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mcp/: GEOCODING.md  PROMPTS.md  prompt_parser.py  test_basemap_tiles.py  test_categories.py  test_enhanced_rendering.py  test_geocoding.py  test_places.py  test_prompts.py
src/mcp/client/location/: README.md  main.py  (+1 more)
(+18 files in other folders)
